# ylang

./: .gitignore  .travis.yml  Eval.hs  LICENSE  Lexer.hs  Main.hs  Parser.hs  README.md  Syntax.hs  Ylang.hs  ylang.cabal
Ylang/: Display.hs  Eval.hs  Lexer.hs  Parser.hs  Primitive.hs  Syntax.hs  Type.hs  Value.hs
Ylang/Parser/: Atomic.hs
lib/Data/: List.ys
old/Ylang/: Display.hs  Eval.hs  Lexer.hs  Type.hs
old/Ylang/Parser/: Atomic.hs
src/Ylang/: Context.hs  Error.hs  Eval.hs  IO.hs  Info.hs  Parser.hs  Type.hs
src/Ylang/Parser/: Combinator.hs  Lexer.hs  Token.hs
src/Ylang/Syntax/: Literal.hs  Term.hs
src/Ylang/Type/: Kind.hs
test/: DocTests.hs  EvalSpec.hs  ParserAtomicSpec.hs  ParserSpec.hs  PrimitiveSpec.hs  SyntaxSpec.hs  TypeSpec.hs  ValueSpec.hs
test/Data/Text/: Gen.hs
test/Eval/Operator/: BoolSpec.hs  NumSpec.hs
test/Ylang/: IOSpec.hs  InfoSpec.hs  ParserSpec.hs  TypeSpec.hs
test/Ylang/Parser/: LexerSpec.hs  TokenSpec.hs
test/Ylang/Syntax/: LiteralSpec.hs
