Name:                ylang

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
Version:             0.1.0.0

-- A short (one-line) description of the package.
Synopsis:            Programming langurage (scheme-like)

-- A longer description of the package.
-- description:

-- The license under which the package is released.
License:             Apache-2.0

-- The file containing the license text.
License-file:        LICENSE

-- The package author(s).
Author:              Kazuhiro Mizushima

-- An email address to which users can send suggestions, bug reports, and
-- patches.
Maintainer:          voqn.tyrantist@gmail.com

-- A copyright notice.
-- copyright:

Category:            Language

Build-Type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
Cabal-Version:       >=1.10

Library
  Default-Language:    Haskell2010
  GHC-Options:         -Wall
  Exposed-Modules:       Ylang.Syntax
                       , Ylang.Lexer
                       , Ylang.Type
                       , Ylang.Parser
                       , Ylang.Eval

  Build-Depends:       base
                       , mtl
                       , containers
                       , parsec


Executable ylsh
  Default-language:    Haskell2010
  Main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  Build-Depends:         base
                       , mtl
                       , containers
                       , parsec
                       , haskeline

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  HS-Source-Dirs:       test
  Ghc-Options:          -threaded -Wall
  Main-Is:              DocTests.hs
  Build-Depends:          base
                        , doctest
Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:          base
                        , containers
                        , hspec
                        , QuickCheck
                        , parsec
                        , ylang
