Name:                ylang

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
Version:             0.1.0.0

-- A short (one-line) description of the package.
Synopsis:            Programming langurage (scheme-like)

-- A longer description of the package.
-- description:

-- The license under which the package is released.
License:             Apache-2.0

-- The file containing the license text.
License-file:        LICENSE

-- The package author(s).
Author:              Kazuhiro Mizushima

-- An email address to which users can send suggestions, bug reports, and
-- patches.
Maintainer:          voqn.tyrantist@gmail.com

-- A copyright notice.
-- copyright:

Category:            Language

Build-Type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
Cabal-Version:       >=1.10

Library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src
  other-extensions: OverloadedStrings
                  , LambdaCase
                  , FlexibleInstances
                  , MultiParamTypeClasses
                  , FunctionalDependencies
  exposed-modules:  Ylang.IO
                  , Ylang.Info
                  , Ylang.Type
                  , Ylang.Type.Kind
                  , Ylang.Syntax.Term

  build-depends:    base
                  , mtl
                  , containers
                  , text
                  , parsec


Executable ylsh
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:    base
                  , mtl
                  , containers
                  , text
                  , parsec
                  , haskeline

Test-Suite test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  ghc-options:      -Wall -fno-warn-orphans
  main-is:          Spec.hs
  build-depends:    base
                  , containers
                  , hspec
                  , QuickCheck
                  , parsec
                  , ylang
