name:                ylang

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Programming langurage
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Kazuhiro Mizushima
maintainer:          voqn.tyrantist@gmail.com

category:            Language

build-type:          Simple

cabal-version:       >=1.10

Library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src
  other-extensions: OverloadedStrings
                  , LambdaCase
                  , FlexibleInstances
                  , MultiParamTypeClasses
                  , FunctionalDependencies

  exposed-modules:  Ylang.IO
                  , Ylang.Info
                  , Ylang.Type
                  , Ylang.Type.Kind
                  , Ylang.Syntax.Literal
                  , Ylang.Syntax.Term
                  , Ylang.Parser.Lexer

  build-depends:    base
                  , mtl
                  , containers
                  , text
                  , parsec


Executable ylsh
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs

  build-depends:    base
                  , mtl
                  , containers
                  , text
                  , parsec
                  , haskeline

Test-Suite test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Spec.hs

  ghc-options:      -Wall -fno-warn-orphans

  other-extensions: OverloadedStrings
                  , ScopedTypeVariables

  build-depends:    base
                  , containers
                  , hspec
                  , QuickCheck
                  , parsec
                  , text >=1.1 && <1.2
                  , bytestring >=0.10 && <0.11
                  , ylang
